infer/tests/codetoanalyze/objc/errors/npe/npe_malloc.dot
/* @generated */
digraph iCFG {
5 [label="5:  DeclStmt \n   n$2=_fun_malloc_no_fail(sizeof(struct Person ):struct Person ) [line 25]\n  *&person:struct Person *=n$2 [line 25]\n " shape="box"]
	

	 5 -> 4 ;
4 [label="4:  BinaryOperatorStmt: Assign \n   n$1=*&person:struct Person * [line 26]\n  *n$1.x:int =10 [line 26]\n " shape="box"]
	

	 4 -> 3 ;
3 [label="3:  Return Stmt \n   n$0=*&person:struct Person * [line 27]\n  *&return:struct Person *=n$0 [line 27]\n " shape="box"]
	

	 3 -> 2 ;
2 [label="2: Exit NpeMallocC_test \n  " color=yellow style=filled]
	

1 [label="1: Start NpeMallocC_test\nFormals:  self:class NpeMallocC *\nLocals:  person:struct Person * \n   DECLARE_LOCALS(&return,&person); [line 24]\n " color=yellow style=filled]
	

	 1 -> 5 ;
}
